# forwarder-bot-deprecated

./: bot.py  pyproject.toml  requirements.txt
